--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,9 +86,9 @@ jobs:
         run: |
          docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
 
-#      - name: Stop and remove container if running
-#        run: |
-#         docker ps -q --filter "name=ml-deployment" | grep -q . && docker stop ml-deployment && docker rm -fv ml-deployment
+      - name: Stop and remove container if running
+        run: |
+         docker ps -q --filter "name=ml-deployment" | grep -q . && docker stop ml-deployment && docker rm -fv ml-deployment
 
       - name: Run Docker Image to serve users
         run: |
